# knoodle

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .issuetracker  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  Doxyfile.in  LICENSE.txt  README.md  annotated.html  classes.html  classkn_1_1ConfigManager-members.html  classkn_1_1ConfigManager.html  classkn_1_1ConfigManager.js  classkn_1_1GHIManager-members.html  classkn_1_1HeapAllocator-members.html  classkn_1_1IGHI-members.html  classkn_1_1IGHI.html  classkn_1_1IGHI.js  classkn_1_1Log.html  classkn_1_1NullGHI-members.html  classkn_1_1NullGHI.html  classkn_1_1PoolAllocator-members.html  classkn_1_1PoolAllocator.html  classkn_1_1StackAllocator-members.html  classkn_1_1StackAllocator.html  classkn_1_1VulkanGHI-members.html  classkn_1_1VulkanGHI.html  classkn_1_1VulkanGHI.js  classkn_1_1os-members.html  classkn_1_1os.html  (+42 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: codeql-analysis.yml  coverage.yml  docs.yml  full-ci.yml  jekyll-gh-pages.yml  linux-arm64-ci.yml  linux-ci.yml  macos-ci.yml  pre-commit.yml  windows-ci.yml
cmake/: FindDocTest.cmake  Finddoctest.cmake  KnoodleModule.cmake  ghi-config.cmake.in  knoodle-engine-config.cmake
cmake/toolchains/: toolchain-linux-x86_64.cmake
config/: engine.ini
docs/: index.md
docs/pages/: index.md
html/: annotated_dup.js  classkn_1_1GHIManager.html  classkn_1_1HeapAllocator.html  classkn_1_1NullGHI.js  classkn_1_1os_1_1Library.html  concepts.html  dir_0d27ce74e9bd514c31e1d63efab6b388.html  dir_2296ab539a1fdfa022509a02517e063b.js  dir_4e8823eb3125fa91f91ddbf8e0f40f91.html  dir_c2eaf122cf0b440e0c2e00dad74c404b.html  dir_c2eaf122cf0b440e0c2e00dad74c404b.js  doxygen.css  files.html  functions_func.html  ghi__definitions_8hpp_source.html  navtreeindex0.js  pool__allocator_8hpp_source.html  string__utils_8hpp_source.html  structkn_1_1GHIDesc-members.html  structkn_1_1GHIDesc.html
html/search/: all_6.js  all_9.js  functions_2.js  functions_3.js
include/: version.hpp.in
include/core/: core_pch.hpp  kn_assert.hpp  string_utils.hpp
include/core/config/: config_manager.hpp
include/core/math/: kn_math.hpp
include/core/memory/: buddy_allocator.hpp  heap_allocator.hpp  pool_allocator.hpp  stack_allocator.hpp
include/core/os/: os.hpp
include/ghi/: ghi_interface.hpp  ghi_manager.hpp
include/knoodle/: version.hpp.in
misc/schema/types/: Node.json
scripts/: install_vulkan_arm64.sh  install_vulkan_raspbian.sh  install_vulkan_ubuntu.sh
search/: all_2.js  all_4.js  all_7.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  concepts_0.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  searchdata.js
source/: CMakeLists.txt  knoodle_version.hpp
source/core/: CMakeLists.txt  common.hpp  kn_assert.hpp  string_utils.hpp
source/core/cmake/: core-config.cmake.in
source/core/config/: config_manager.cpp  config_manager.hpp
source/core/include/: kn-assert.hpp
source/core/include/math/: kn-math.hpp
source/core/include/memory/: buddy-allocator.hpp  buddy_allocator.hpp  heap-allocator.hpp  heap_allocator.hpp  pool-allocator.hpp  pool_allocator.hpp  stack-allocator.hpp  stack_allocator.hpp
source/core/log/: log.cpp  log.hpp
source/core/math/: kn_math.hpp
source/core/memory/: heap_allocator.cpp  heap_allocator.hpp  pool_allocator.hpp  smart_ptr.hpp  stack_allocator.cpp  stack_allocator.hpp
source/core/os/: os.hpp  os_linux.cpp  os_windows.cpp
source/core/src/memory/: buddy-allocator.cpp  buddy_allocator.cpp  heap-allocator.cpp  heap_allocator.cpp  pool-allocator.cpp  pool_allocator.cpp  stack-allocator.cpp  stack_allocator.cpp
source/core/tests/math/: kn-math-test.cpp  kn_math_test.cpp
source/core/tests/memory/: allocator-test.cpp  allocator_test.cpp
source/engine/: CMakeLists.txt  engine.cpp  engine.hpp
source/engine/cmake/: engine-config.cmake
source/ghi/: CMakeLists.txt  ghi_definitions.hpp  ghi_interface.hpp  ghi_manager.cpp  ghi_manager.hpp
source/ghi/cmake/: ghi-config.cmake
source/ghi/null_ghi/: null_ghi.cpp  null_ghi.hpp
source/knoodle/: CMakeLists.txt  knoodle.cpp  knoodle.hpp
source/vulkan_ghi/: CMakeLists.txt  vulkan_ghi.cpp  vulkan_ghi.hpp
source/vulkan_ghi/cmake/: vulkan-ghi-config.cmake
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/config/: config_manager.cpp
src/core/log/: log.cpp
src/core/memory/: buddy_allocator.cpp  heap_allocator.cpp  pool_allocator.cpp  stack_allocator.cpp
src/ghi/: CMakeLists.txt  ghi_manager.cpp
src/ghi/null_ghi/: null_ghi.cpp
tests/core/: test_string_utils.cpp
tests/core/config/: test_config.cpp
tests/core/math/: test_math_ops.cpp
tests/core/res/: test.ini
tests/ghi/: test_ghi_manager.cpp
tests/knoodle/: test_knoodle_init.cpp
tools/: CMakeLists.txt
tools/shader_compiler/: CMakeLists.txt  dxc_compiler.cpp  main.cpp  shader_compiler_structures.hpp  shader_compiler_utils.cpp
tools/shader_compiler/test/: test_shader.kshader  test_shader_blend.kshader
